Fix footer misalignment

--- a/main.css
+++ b/main.css
@@ -33,20 +33,23 @@
         font-family: "Alex Brush"; font-size: 33px;
     }
     .container {
+        display: block;
         position: relative;
+        object-fit: cover;
         width: 100%;
+        height: auto;
         padding-top: 20px;
         padding-right: 20px;
         padding-left: 20px;
-      }
+    }
       
-      .image {
+    .image {
         display: block;
         width: 100%;
         height: auto;
-      }
+    }
       
-      .overlay {
+    .overlay {
         position: absolute;
         top: 0;
         bottom: 0;
@@ -57,13 +60,13 @@
         opacity: 0;
         transition: .5s ease;
         background-color: #201149;
-      }
+    }
       
-      .container:hover .overlay {
+    .container:hover .overlay {
         opacity: 1;
-      }
+    }
       
-      .text {
+    .text {
         color: white;
         font-family: "Alex Brush"; 
         font-size: 50px;
@@ -74,135 +77,145 @@
         -ms-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
         text-align: center;
-      }
+    }
 
-      .dropbtn {
-          background-color:#201149;
-          width: 100%;
-          color: white;
-          padding: 10px;
-          font-size: 14px;
-          border: none;
-          cursor: pointer;
-      }
+    .dropbtn {
+        background-color:#201149;
+        width: 100%;
+        color: white;
+        padding: 10px;
+        font-size: 14px;
+        border: none;
+        cursor: pointer;
+    }
 
-      .dropdown {
-          position: relative;
-          display: flex;
-          justify-content: right;
-      }
+    .dropdown {
+        position: fixed;
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: center;
+    }
 
-      .dropdown-content {
-          display: none;
-          position: absolute;
-          background-color: #f9f9f9;
-          min-width: 160px;
-          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-          z-index: 1;
-      }
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
 
-      .dropdown-content a {
-          color: black;
-          padding: 16px 16px;
-          text-decoration: none;
-          display: block;
-      }
+    .dropdown-content a {
+        color: black;
+        padding: 16px 16px;
+        text-decoration: none;
+        display: block;
+    }
 
-      .dropdown-content a:hover {
-          background-color: #f1f1f1;
-        }
+    .dropdown-content a:hover {
+        background-color: #f1f1f1;
+    }
 
-      .dropdown:hover .dropdown-content {
-          display: block;
-      }
-      .dropdown:hover .dropbtn {
-          background-color: #907eb5;
-          display: flex;
-      }
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
 
-      * {
-          box-sizing: border-box;
-      }
+    .dropdown:hover .dropbtn {
+        background-color: #907eb5;
+        display: flex;
+    }
+
+    * {
+        box-sizing: border-box;
+    }
       
-      .column {
-          float: left;
-          width: 33.33%;
-          padding: 5px;
-      }
+    .column {
+        float: left;
+        width: 33.33%;
+        padding: 5px;
+    }
 
-      .row::after {
-          content: "";
-          clear: both;
-          display: table;
-      }
+    .row::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
 
-      .footer {
-          position: relative;
-          font-family: Arial, Helvetica, sans-serif;
-          left: 0;
-          bottom: 0;
-          width: 100%;
-          background-color: #907eb5;
-          opacity: .5;
-          color: white;
-          text-align: center;
-          font-size: 12px;
-      }
+    .footer {
+        position: relative;
+        font-family: Arial, Helvetica, sans-serif;
+        left: 0;
+        bottom: 0;
+        top: 0;
+        width: 100%;
+        background-color: #907eb5;
+        opacity: .5;
+        color: white;
+        text-align: center;
+        font-size: 12px;
+    }
       
-      .button {
-          position: relative;
-      }
+    .button {
+        position: relative;
+    }
 
-      .invite{
+    .invite{
         display: block;
         margin-left: auto;
         margin-right: auto;
         width: 50%;
         height: auto;
-      }
-     .container2:hover {
+    }
+
+    .container2:hover {
         width: 60%;
         margin: 2rem auto;
         box-shadow: inset 0 0 0 10px #201149;
-        }
+    }
       
-      .gallery {
-          display: grid;
-          grid-template-columns: repeat(8, 1fr);
-          grid-auto-rows: repeat(8, 5vw);
-          grid-gap: 1rem;
-      }
-      .gallery-image {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          display: block;
-      }
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(8, 1fr);
+        grid-auto-rows: repeat(8, 5vw);
+        grid-gap: 0px;
+    }
 
-      .gallery-item--1 {
-          grid-column-start: 1;
-          grid-column-end: 6;
-          grid-row-start: 1;
-          grid-row-end: 5;
-      }
-      .gallery-item--2 {
+    .gallery-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        display: block;
+    }
+
+    .gallery-item--1 {
+        grid-column-start: 1;
+        grid-column-end: 6;
+        grid-row-start: 1;
+        grid-row-end: 5;
+    }
+
+    .gallery-item--2 {
         grid-column-start: 6;
         grid-column-end: -1;
         grid-row-start: 1;
         grid-row-end: 5;
     }
+
     .gallery-item--3 {
         grid-column-start: 1;
         grid-column-end: 4;
         grid-row-start: 5;
         grid-row-end: 9;
     }
+
     .gallery-item--4 {
         grid-column-start: 4;
         grid-column-end: 9;
         grid-row-start: 5;
         grid-row-end: 9;
     }
+    
     @media screen and (max-width: 1000px) {
         .column {
             width: auto;
